<resources>
    <!-- Reem Naqvi, 6/9/19. All Rights Reserved. -->
    <!-- used to display strings in layout files -->

    <string name="appname">Hotel Booking</string>
    <string name="name">Enter Name:</string>
    <string name="name1">   Name:</string>
    <string name="email">Enter Email:</string>
    <string name="email1">   Email:</string>
    <string name="date">Enter CheckIn:</string>
    <string name="date1">  CheckIn:</string>
    <string name="dates">Enter CheckOut:</string>
    <string name="dates1">  CheckOut:</string>
    <string name="room"> Select Room type:</string>
    <string name="room1">Room type:</string>
    <string name="title">Breakfast?</string>
    <string name="guests"> How many guests?</string>
    <string name="guests1">Number of guests:</string>
    <string name="title1">Which Hotel?</string>
    <string name="title2">Hotel Name:</string>
    <string name="submit">Submit</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="num">Max 5!</string>
    <array name="hotels">
        <item>Hilton</item>
        <item>Westin</item>
        <item>Hyatt Regency</item>
        <item>Inn of Chicago</item>
        <item>Swissotel</item>
        <item>Holiday Inn</item>
    </array>
    <array name="rooms">
        <item>Single</item>
        <item>Double</item>
        <item>Triple</item>
        <item>Quad</item>
        <item>Executive</item>
    </array>
</resources>
